# ompl_rasp

./: CMakeLists.txt  README.md  package.xml
examples/: immaze.cpp  vikings.cpp
include/: ExperimentInformation.h  GraphUtils.h  RoadmapFromFile.h
include/ramp/: NaiveRASP.h  RASP.h  StateTypes.h  StateWrapper.h
src/: NaiveRASP.cpp  RASP.cpp
